--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <div id="blogList">
       <div class="blog-post-card">
         <div class="blog-post-image">
-          <img src="blog/first-blog-entry/hero-image.jpg" alt="Welcome to Roam Anguilla" onerror="this.style.display='none'">
+          <img src="blog/firstblog/hero-image.jpg" alt="Welcome to Roam Anguilla" onerror="this.style.display='none'">
         </div>
         <div class="blog-post-content">
           <h3 class="blog-post-title">Welcome to Roam Anguilla - Your Ultimate Island Guide</h3>
@@ -881,7 +881,7 @@ document.addEventListener('DOMContentLoaded', function() {
             <span class="blog-post-date">August 13, 2025</span>
             <span class="blog-post-author">by Roam Anguilla Team</span>
           </div>
-          <a href="blog/first-blog-entry/firstblog.html" class="blog-read-more buttonstyle">Read More</a>
+          <a href="blog/firstblog/index.html" class="blog-read-more buttonstyle">Read More</a>
         </div>
       </div>
       
